--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "moment": "^2.24.0",
     "net": "^1.0.2",
     "node-sass": "^4.13.0",
+    "onoff": "^5.0.1",
     "pg": "^7.17.0",
     "react": "^16.12.0",
     "react-bootstrap-time-picker": "^2.0.1",
@@ -25,7 +26,7 @@
     "react-moment": "^0.9.7",
     "react-native": "^0.60.6",
     "react-native-tplink": "^0.3.9",
-    "react-scripts": "3.0.1",
+    "react-scripts": "^3.3.0",
     "react-time-picker": "^3.9.0",
     "sass": "^1.24.3",
     "sass-loader": "^8.0.0",
